--- a/index.html
+++ b/index.html
@@ -31,8 +31,7 @@
     <!-- Tasks To Do -->
     <section class="task-list-wrapper">
       <h2 class="list-title">Tasks To Do</h2>
-      <ul class="task-list" id="tasks-to-do">
-      </ul>
+      <ul class="task-list" id="tasks-to-do"></ul>
     </section>
     <!-- Tasks In Progress -->
     <section class="task-list-wrapper">
